fix: stripe service implementation